# rename-potions-skse

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TESTS.md  vcpkg.json
cmake/: Version.h.in  headerlist.cmake  sourcelist.cmake
scripts/: format  register
src/: CoSave.cpp  CoSave.h  DLLMain.cpp  PCH.h  RecipeMap.cpp  RecipeMap.h
